<resources>
    <string name="app_name">TaskManager</string>
    <string name="title_activity_tasks">TasksActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="task_list">Task List</string>
    <string name="task_view">Task View</string>
    <string name="task_edit">Edit Task</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="unfulfilled">Unfulfilled</string>
    <string name="task_is_done">Task Is Done</string>
    <string name="completed">Completed</string>
    <string name="add_new_task">Add New Task</string>
    <string name="completion_tabs">Completion tabs</string>
    <string name="task_title">Task Title</string>
    <string name="color_tag">Color Tag</string>
    <string name="deadline">Deadline</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="tags">Tags</string>
    <string name="set_complete">Set Complete</string>
    <string name="set_unfulfilled">Set Unfulfilled</string>
    <string name="tags_input_hint">tags_input_hint</string>
    <string name="add_task">Add Task</string>
    <string name="save_task">Save Task</string>

    <string name="color_tag_yellow">Color Tag Yellow</string>
    <string name="color_tag_green">Color Tag Green</string>
    <string name="color_tag_light_blue">Color Tag Light Blue</string>
    <string name="color_tag_blue">Color Tag Blue</string>
    <string name="color_tag_red">Color Tag Red</string>
    <string name="color_tag_orange">Color Tag Orange</string>
    <string name="color_tag_light_purple">Color Tag Light Purple</string>
    <string name="color_tag_purple">Color Tag Purple</string>
    <string name="delete_task">Delete task</string>
    <string name="search_task">Search task</string>
    <string name="task_delete_warning">Are you sure you want to delete</string>
    <string name="task_deleted">Task successfully deleted</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="notification_title">Task Manager</string>
    <string name="notification_description">Task whose deadline is expiring</string>
    <string name="tags_input_separator_hint">Use comma as separator</string>
    <string name="empty_task_title_warning">Please fill task title field</string>
</resources>