<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/taskList">

    <fragment
        android:id="@+id/taskList"
        android:name="com.bogleo.taskmanager.screens.listmain.TaskListFragment"
        android:label="@string/task_list"
        tools:layout="@layout/fragment_task_list">
        <action
            android:id="@+id/action_taskList_to_taskBrowsing"
            app:destination="@id/taskView" />
        <action
            android:id="@+id/action_taskList_to_taskAddNewFragment"
            app:destination="@id/taskAddNewFragment" />
        <action
            android:id="@+id/action_taskList_to_taskEditFragment"
            app:destination="@id/taskEditFragment" />
    </fragment>
    <fragment
        android:id="@+id/taskView"
        android:name="com.bogleo.taskmanager.screens.browsing.TaskBrowsingFragment"
        android:label="@string/task_view"
        tools:layout="@layout/fragment_task_browsing">
        <action
            android:id="@+id/action_taskBrowsing_to_taskEditFragment"
            app:destination="@id/taskEditFragment" />
        <action
            android:id="@+id/action_taskBrowsing_to_taskList"
            app:destination="@id/taskList" />
        <argument
            android:name="task"
            app:argType="com.bogleo.taskmanager.data.Task" />
    </fragment>
    <fragment
        android:id="@+id/taskEditFragment"
        android:name="com.bogleo.taskmanager.screens.edit.TaskEditFragment"
        android:label="@string/task_edit"
        tools:layout="@layout/fragment_task_edit" >
        <action
            android:id="@+id/action_taskEditFragment_to_taskList"
            app:destination="@id/taskList" />
        <argument
            android:name="task"
            app:argType="com.bogleo.taskmanager.data.Task" />
    </fragment>
    <fragment
        android:id="@+id/taskAddNewFragment"
        android:name="com.bogleo.taskmanager.screens.addnew.TaskAddNewFragment"
        android:label="@string/add_new_task"
        tools:layout="@layout/fragment_task_add_new" >
        <action
            android:id="@+id/action_taskAddNewFragment_to_taskList"
            app:destination="@id/taskList" />
    </fragment>
</navigation>