<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/tntCardContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="24dp"
    android:layout_marginTop="24dp"
    app:cardCornerRadius="24dp"
    app:cardElevation="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/tntImageEdit"
            style="@style/ImageTintList"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/task_is_done"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_edit" />

        <ImageView
            android:id="@+id/tntImageState"
            style="@style/ImageTintList"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/task_is_done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_circle_empty" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tntTextTitle"
                style="@style/TextList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|start"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/task_title"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="@+id/task_content"
                app:layout_constraintStart_toStartOf="@+id/task_content"
                app:layout_constraintTop_toBottomOf="@+id/twtRecyclerTags" />

            <TextView
                android:id="@+id/tntTextDate"
                style="@style/TextList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawablePadding="10dp"
                android:text="@string/date"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_calendar"
                app:layout_constraintBottom_toBottomOf="@+id/dateImageTi"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/dateImageTi"
                app:layout_constraintTop_toTopOf="@+id/dateImageTi" />

            <TextView
                android:id="@+id/tntTextTime"
                style="@style/TextList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawablePadding="10dp"
                android:text="@string/time"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_clock"
                app:layout_constraintBottom_toBottomOf="@+id/timeImageTi"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/timeImageTi"
                app:layout_constraintTop_toTopOf="@+id/timeImageTi" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>



